third_party/move/tools/move-package-manifest/tests/dependencies/redundant-fields-rev.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 |
5 | [dependencies]
6 | a = { local = "../a", rev = "0x1234" }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ redundant field "rev" -- only needed for "git" dependencies
  |
